# hostnamed

./: AUTHORS  BUGS-NEWS  NEWS  hostnamectl  hostnamed.SlackBuild  localectl  meson.build  meson_options.txt
data/: org.freedesktop.hostname1.conf  org.freedesktop.hostname1.policy  org.freedesktop.hostname1.rules.in  org.freedesktop.hostname1.service.in
hostnamed/: README.md
hostnamed/data/: meson.build  org.freedesktop.hostname1.policy
hostnamed/src/: main.c  meson.build  rcl-hostname.h
man/: hostnamectl.1  hostnamed.8  meson.build
po/: LINGUAS  POTFILES  ab.po  ain.po  ar_Latn.po  de.po  es.po  et.po  fr.po  hostnamed.pot  it.po  ja.po  meson.build  nl.po  pl.po  pt_BR.po  ru.po  zh_CN.po
slack/: hostnamectl
src/: main.c  rcl-hostname.c  rcl-hostname.h
