# ─────────────────────────────────────────────────────────────────────────────
# meson_options.txt – hostnamed build options
# ─────────────────────────────────────────────────────────────────────────────

# polkit is required in production but can be disabled for unit-test builds
# where there is no system bus.
option(
  'polkit',
  type        : 'feature',
  value       : 'auto',
  description : 'Use polkit for authorising Set* D-Bus method calls',
)

# D-Bus system service files (.service) install location.  Defaults to the
# standard path; override if your distro puts them elsewhere.
option(
  'dbus_system_service_dir',
  type        : 'string',
  value       : '',
  description : 'Directory for D-Bus system service files '
              + '(default: <datadir>/dbus-1/system-services)',
)

# D-Bus system policy (bus configuration) files.
option(
  'dbus_system_conf_dir',
  type        : 'string',
  value       : '',
  description : 'Directory for D-Bus system bus configuration files '
              + '(default: <sysconfdir>/dbus-1/system.d)',
)

# polkit policy files.
option(
  'polkit_policy_dir',
  type        : 'string',
  value       : '',
  description : 'Directory for polkit .policy files '
              + '(default: <datadir>/polkit-1/actions)',
)

# Path to the hostname configuration file.  The freedesktop/systemd convention
# is /etc/hostname; Slackware uses /etc/HOSTNAME.  Stored in config.h as
# HOSTNAME_FILE and used everywhere the daemon reads or writes the hostname.
option(
  'HOSTNAME',
  type        : 'string',
  value       : '/etc/HOSTNAME',
  description : 'Path to the hostname config file',
)

option(
  'privileged-group',
  type : 'string',
  value : 'wheel',
  description : 'Group allowed to change hostname without authentication'
)
